<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/exercise_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/exercise_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_name" />

    <EditText
        android:id="@+id/exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="" />

    <RadioGroup
        android:id="@+id/exercise_value_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/exercise_value_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/value_type" />

        <RadioButton
            android:id="@+id/exercise_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration" />

        <RadioButton
            android:id="@+id/exercise_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight" />

        <RadioButton
            android:id="@+id/exercise_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance" />
    </RadioGroup>

    <Button
        android:id="@+id/exercise_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/success_btn"
        android:text="@string/save" />

</LinearLayout>