<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/exercise_set_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        android:text="@string/insert_exercise_set"/>

    <TextView
        android:id="@+id/exercise_set_reps_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_of_reps" />

    <EditText
        android:id="@+id/exercise_set_reps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="" />

    <TextView
        android:id="@+id/exercise_set_value_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/exercise_set_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="" />

    <Button
        android:id="@+id/exercise_set_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/success_btn"
        android:text="@string/save" />

</LinearLayout>